// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test.table() builder > auto-snapshot from test callback > auto-snapshot function mode > add(1, 2) → 3 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
────────────────────────────────────────────────────
2
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  custom: 'snapshot data'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`Test.table() builder > auto-snapshot from test callback > auto-snapshot generic mode > test 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello
╠══════════════════════════════════════════════════╣ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`Test.table() builder > basic functionality > cases helper > upperCase('hello') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
HELLO
╚══════════════════════════════════════════════════╝"
`;

exports[`Test.table() builder > basic functionality > cases helper > upperCase('world') 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
world
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
WORLD
╚══════════════════════════════════════════════════╝"
`;

exports[`Test.table() builder > basic functionality > multi-argument snapshots > add(1, 2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
────────────────────────────────────────────────────
2
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
3
╚══════════════════════════════════════════════════╝"
`;

exports[`Test.table() builder > basic functionality > multi-argument snapshots > add(10, 20) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
10
────────────────────────────────────────────────────
20
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
30
╚══════════════════════════════════════════════════╝"
`;

exports[`circular structure handling > identity2({ name: 'test', self: [Circular] }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  name: 'test',
  self: [Circular]
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'test',
  self: [Circular]
}
╚══════════════════════════════════════════════════╝"
`;

exports[`no snapshots when output is specified (issue #6) > function mode with output > add(1, 2) → 3 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
────────────────────────────────────────────────────
2
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  thisValueShouldBeIgnored: 'no snapshot should be created'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`no snapshots when output is specified (issue #6) > function mode with output > add(5, 5) → 10 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
5
────────────────────────────────────────────────────
5
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  thisValueShouldBeIgnored: 'no snapshot should be created'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`no snapshots when output is specified (issue #6) > generic mode with output > fn('hello') → 'HELLO' 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
hello
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  thisValueShouldBeIgnored: 'no snapshot should be created'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`no snapshots when output is specified (issue #6) > generic mode with output > fn('world') → 'WORLD' 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
world
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  thisValueShouldBeIgnored: 'no snapshot should be created'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`promise auto-awaiting > run(() => { throw "error string"; }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
() => {
      throw "error string";
    }
╠══════════════════════════════════════════════════╣ THEN THROWS STRING
error string
╚══════════════════════════════════════════════════╝"
`;

exports[`promise auto-awaiting > run(() => { throw 42; }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
() => {
      throw 42;
    }
╠══════════════════════════════════════════════════╣ THEN THROWS NUMBER
42
╚══════════════════════════════════════════════════╝"
`;

exports[`promise auto-awaiting > run(() => { throw new Error("error"); }) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
() => {
      throw new Error("error");
    }
╠══════════════════════════════════════════════════╣ THEN THROWS ERROR
Error: error
╚══════════════════════════════════════════════════╝"
`;

exports[`promise auto-awaiting > run(() => 42) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
() => 42
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
42
╚══════════════════════════════════════════════════╝"
`;

exports[`promise auto-awaiting > run(() => Promise.reject("rejection string")) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
() => Promise.reject("rejection string")
╠══════════════════════════════════════════════════╣ THEN RETURNS PROMISE REJECTING TO STRING
rejection string
╚══════════════════════════════════════════════════╝"
`;

exports[`promise auto-awaiting > run(() => Promise.reject(100)) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
() => Promise.reject(100)
╠══════════════════════════════════════════════════╣ THEN RETURNS PROMISE REJECTING TO NUMBER
100
╚══════════════════════════════════════════════════╝"
`;

exports[`promise auto-awaiting > run(() => Promise.reject(new Error("rejection"))) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
() => Promise.reject(new Error("rejection"))
╠══════════════════════════════════════════════════╣ THEN RETURNS PROMISE REJECTING TO ERROR
Error: rejection
╚══════════════════════════════════════════════════╝"
`;

exports[`promise auto-awaiting > run(() => Promise.resolve("hello")) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
() => Promise.resolve("hello")
╠══════════════════════════════════════════════════╣ THEN RETURNS PROMISE RESOLVING TO STRING
hello
╚══════════════════════════════════════════════════╝"
`;

exports[`promise auto-awaiting > run(() => Promise.resolve(new Error("This is a value, not a rejection"))) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
() => Promise.resolve(new Error("This is a value, not a rejection"))
╠══════════════════════════════════════════════════╣ THEN RETURNS PROMISE RESOLVING TO ERROR
Error: This is a value, not a rejection
╚══════════════════════════════════════════════════╝"
`;

exports[`snapshot sugar methods > .casesInput() > add(1, 2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
────────────────────────────────────────────────────
2
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
3
╚══════════════════════════════════════════════════╝"
`;

exports[`snapshot sugar methods > .casesInput() > add(3, 4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3
────────────────────────────────────────────────────
4
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
7
╚══════════════════════════════════════════════════╝"
`;

exports[`snapshot sugar methods > .casesInput() > add(5, 6) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
5
────────────────────────────────────────────────────
6
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
11
╚══════════════════════════════════════════════════╝"
`;

exports[`snapshot sugar methods > .describeInputs() > edge cases > add(-1, 1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-1
────────────────────────────────────────────────────
1
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
0
╚══════════════════════════════════════════════════╝"
`;

exports[`snapshot sugar methods > .describeInputs() > edge cases > add(0, 0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
────────────────────────────────────────────────────
0
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
0
╚══════════════════════════════════════════════════╝"
`;

exports[`snapshot sugar methods > .describeInputs() > edge cases > add(1, 1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
────────────────────────────────────────────────────
1
╠══════════════════════════════════════════════════╣ THEN RETURNS NUMBER
2
╚══════════════════════════════════════════════════╝"
`;
